--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
   },
   "dependencies": {
     "@material/mwc-button": "^0.25.3",
+    "@material/mwc-circular-progress": "^0.25.3",
+    "@material/mwc-dialog": "^0.25.3",
+    "@material/mwc-fab": "^0.25.3",
+    "@material/mwc-list": "^0.25.3",
+    "@material/mwc-snackbar": "^0.25.3",
     "@material/mwc-tab": "^0.25.3",
     "@material/mwc-tab-bar": "^0.25.3"
   }
