--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@material/mwc-list": "^0.25.3",
     "@material/mwc-snackbar": "^0.25.3",
     "@material/mwc-tab": "^0.25.3",
-    "@material/mwc-tab-bar": "^0.25.3"
+    "@material/mwc-tab-bar": "^0.25.3",
+    "@material/mwc-top-app-bar": "^0.25.3"
   }
 }
